data/derived/comb/progs/unify/prog8430.ml.out
Characters 121-144:
  List.fold_left f base l;;
  ^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type string -> string -> string
       but an expression was expected of type string
